--- a/frontend/src/components/homePage/HomePage.css
+++ b/frontend/src/components/homePage/HomePage.css
@@ -16,6 +16,10 @@
 .HomePage{
     margin-top: 90px;
 }
+.HomePage h1{
+    color: white;
+    text-shadow: 2px 2px 2px rgb(92, 92, 92);
+}
 .gif{
     width: 200px;
     height: auto;
