chore: organize and format CSS files for consistent styling

--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -1,13 +1,13 @@
 #root {
-    display: flex;
-    justify-content: center;
-    min-height: 100vh;
-    margin: 0;
-    
-    text-align: center;
-    background: rgb(131,74,161);
-    background: linear-gradient(150deg, rgba(131,74,161,1) 9%, rgba(40,23,84,1) 70%, rgba(12,8,45,1) 100%);
-  }
-  *{
-    font-family: Jost;
-  }
+  display: flex;
+  justify-content: center;
+  min-height: 100vh;
+  margin: 0;
+  text-align: center;
+  background: rgb(131, 74, 161);
+  background: linear-gradient(150deg, rgba(131, 74, 161, 1) 9%, rgba(40, 23, 84, 1) 70%, rgba(12, 8, 45, 1) 100%);
+}
+
+* {
+  font-family: Jost;
+}
