--- a/frontend/src/components/ColorButtons/ColorButtons.css
+++ b/frontend/src/components/ColorButtons/ColorButtons.css
@@ -2,7 +2,14 @@
 .Buttons{
     display: flex;
     align-items: center;
-    justify-content: center;  
+    justify-content: center;
+    animation: show 0.4s ease-in 0.1s forwards;
+    background-color: red;
+   
+}
+
+.ColorButtons{
+    background-color: green;
 }
   
 /* Button styles */
@@ -33,4 +40,15 @@
 .Buttons .Blue{
     border-bottom-right-radius: 50px;
     background-color: rgb(24, 165, 221);
+}
+@keyframes show {
+    0% {
+        opacity: 0;
+        transform:scale(1.6);
+    }
+
+    100% {
+        opacity: 1;
+        transform:scale(1);
+    }
 }
