--- a/frontend/src/components/ColorButtons/ColorButtons.css
+++ b/frontend/src/components/ColorButtons/ColorButtons.css
@@ -1,18 +1,14 @@
-/* Ajustes gerais para os botões */
+.ColorButtons{
+    margin-left: 100px;
+    margin-right: 100px;
+}
+
 .Buttons{
     display: flex;
     align-items: center;
-    justify-content: center;
-    animation: show 0.4s ease-in 0.1s forwards;
-    background-color: red;
-   
+    justify-content: center;  
 }
 
-.ColorButtons{
-    background-color: green;
-}
-  
-/* Button styles */
 .Buttons button{
     font-size: 15px;
     width: 140px;
@@ -20,11 +16,9 @@
     margin: 5px;
     border: 2px;
     cursor: pointer;
-    /* Animation to button colors */
     transition: background-color 0.2s ease-in-out;
 }
 
-/* Buttons styles */
 .Buttons .Red{
     border-top-left-radius: 50px;
     background-color: rgb(223, 55, 55);
@@ -40,15 +34,4 @@
 .Buttons .Blue{
     border-bottom-right-radius: 50px;
     background-color: rgb(24, 165, 221);
-}
-@keyframes show {
-    0% {
-        opacity: 0;
-        transform:scale(1.6);
-    }
-
-    100% {
-        opacity: 1;
-        transform:scale(1);
-    }
 }
