feat: more animations to the colorButtons

--- a/frontend/src/components/ColorButtons/ColorButtons.css
+++ b/frontend/src/components/ColorButtons/ColorButtons.css
@@ -1,6 +1,7 @@
 .ColorButtons{
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-left: 150px;
+    margin-right: 150px;
+    margin-top: 50px;
 }
 
 .Buttons{
