refac: removed pt-br to english

--- a/frontend/src/components/ColorButtons/ColorButtons.css
+++ b/frontend/src/components/ColorButtons/ColorButtons.css
@@ -1,6 +1,6 @@
 .ColorButtons{
-    margin-left: 150px;
-    margin-right: 150px;
+    overflow: hidden;
+    padding: 20px;
     margin-top: 50px;
 }
 
