feat: logout logic, store token and userId in localStorage

--- a/frontend/src/components/homePage/HomePage.css
+++ b/frontend/src/components/homePage/HomePage.css
@@ -6,16 +6,10 @@
     flex-wrap: wrap;
     gap: 60px;
     margin-top: 60px;
-
     padding-top: 20px;
     padding-bottom: 20px;
-
     opacity: 0;
     animation: fadeIn 0.5s ease-in 0.1s forwards;
-}
-
-.HomePage {
-    margin-top: 90px;
 }
 
 .HomePage h1 {
@@ -23,10 +17,48 @@
     text-shadow: 2px 2px 2px rgb(92, 92, 92);
 }
 
-.gif {
-    width: 200px;
-    height: auto;
-    margin-top: 20px;
+.HomePage-Profile {
+    display: flex;
+    flex-direction: row;
+    margin: auto;
+    margin-top: 10px;
+}
+
+.HomePage-Profile img {
+    width: 100px;
+}
+
+.HomePage-Profile-Buttons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    align-content: center;
+    align-self: center;
+    flex-direction: row;
+    margin-left: 20px;
+
+}
+
+.HomePage-Profile-Buttons button {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    gap: 5px;
+    background-color: #21d421;
+    border: none;
+    border-radius: 5px;
+    color: white;
+}
+
+.HomePage-Profile-Buttons img {
+    width: 30px;
+}
+
+.HomePage-Profile-Buttons button:hover {
+    background-color: #1cb81c;
+    cursor: pointer;
 }
 
 @keyframes fadeIn {
