--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -4,8 +4,7 @@
   min-height: 100vh;
   margin: 0;
   text-align: center;
-  background: rgb(131, 74, 161);
-  background: linear-gradient(150deg, rgba(131, 74, 161, 1) 9%, rgba(40, 23, 84, 1) 70%, rgba(12, 8, 45, 1) 100%);
+  background: linear-gradient(to bottom right, #7e22ce, #2563eb);
 }
 
 * {
