--- a/frontend/src/components/coopRoom/coopRoom.css
+++ b/frontend/src/components/coopRoom/coopRoom.css
@@ -1,13 +1,15 @@
 .create-room-container {
 	min-height: 100vh;
 	background: linear-gradient(to bottom right, #7e22ce, #2563eb);
-	padding: 1rem;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
 
 .create-room-card {
+	display: flex;
+	flex-direction: column;
+	gap: 30px;
 	background-color: #fff;
 	padding: 2rem;
 	border-radius: 1.5rem;
@@ -27,14 +29,13 @@
 	font-weight: bold;
 	text-align: center;
 	color: #333;
-	margin-bottom: 1.5rem;
+	margin: 0.5rem;
 }
 
 .form-group label {
 	display: block;
 	font-weight: 500;
 	margin-top: 0.5rem;
-	margin-bottom: 0.5rem;
 	color: #555;
 }
 
@@ -53,6 +54,7 @@
 }
 
 .create-room-button {
+	width: 100%;
 	padding: 0.75rem;
 	background-color: #7e22ce;
 	color: white;
