--- a/frontend/src/components/loginPage/login.css
+++ b/frontend/src/components/loginPage/login.css
@@ -28,6 +28,11 @@
     flex-direction: column;
     gap: 1.25rem;
   }
+
+  .form-group input {
+    width: 100%;
+    box-sizing: border-box;
+  }
   
   .form-group label {
     display: block;
