--- a/frontend/src/components/roomForm/roomForm.css
+++ b/frontend/src/components/roomForm/roomForm.css
@@ -66,7 +66,7 @@
 }
 
 .create-room-link {
-    margin-top: 1rem;
+    margin: 0;
     text-align: center;
     font-size: 0.95rem;
     color: #444;
