--- a/frontend/src/components/homePage/HomePage.css
+++ b/frontend/src/components/homePage/HomePage.css
@@ -36,9 +36,16 @@
     align-items: center;
     align-content: center;
     align-self: center;
-    flex-direction: row;
-    margin-left: 20px;
+    flex-direction: column;
+    margin-left: 15px;
+    padding: 5px;
+    margin-bottom: 10px;
+    background-color: white;
+    border-radius: 10px;
 
+}
+#logged{
+    color: rgb(0, 0, 0);
 }
 
 .HomePage-Profile-Buttons button {
@@ -49,6 +56,7 @@
     background-color: #21d421;
     border: none;
     border-radius: 5px;
+    font-size: 15px;
     color: white;
 }
 
